feat: Remove HomeController and Main class; update MvcController and ModelView for improved JoltModel handling